--- a/src/main/resources/com/example/fitquest/Menu-view.fxml
+++ b/src/main/resources/com/example/fitquest/Menu-view.fxml
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<VBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx"
-      xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.example.fitquest.Controller.MenuController">
+<VBox fx:id="MenuGridPane" alignment="CENTER" spacing="20.0" stylesheets="@css/Menu.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fitquest.Controller.MenuController">
     <padding>
-        <Insets top="20.0" bottom="20.0" left="20.0" right="20.0"/>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
 
     <!-- Titel -->
-    <Label fx:id="welcomeText" text="Welcome to FitQuest!" style="-fx-font-size: 18px; -fx-font-weight: bold;"/>
+    <Label fx:id="welcomeText" style="-fx-font-size: 18px; -fx-font-weight: bold;" text="Welcome to FitQuest!" textFill="RED" />
 
     <!-- Start Challenge-knappen -->
-    <Button text="Start Challenge" onAction="#onStartChallengeClick" prefWidth="200"/>
+    <Button onAction="#onStartChallengeClick" prefWidth="200" text="Start Challenge" />
 
     <!-- Leaderboard-knappen -->
-    <Button text="Leaderboard" onAction="#onLeaderboardClick" prefWidth="200"/>
+    <Button onAction="#onLeaderboardClick" prefWidth="200" text="Leaderboard" />
 
     <!-- Logga ut-knappen -->
-    <Button text="Logga ut" onAction="#onLogoutClick" prefWidth="200"/>
+    <Button onAction="#onLogoutClick" prefWidth="200" text="Logga ut" />
 </VBox>
