--- a/src/main/resources/com/example/fitquest/css/Menu.css
+++ b/src/main/resources/com/example/fitquest/css/Menu.css
@@ -1,7 +1,7 @@
 #MenuGridPane{
-    -fx-background-size: contain;
+    -fx-background-size: cover;
     -fx-background-position: center;
-    -fx-background-image: url('../images/bg3.jpg');
+    -fx-background-image: url('../images/bg4.png');
     -fx-background-repeat: no-repeat;
 
 }
