--- a/src/main/resources/com/example/fitquest/Menu-view.fxml
+++ b/src/main/resources/com/example/fitquest/Menu-view.fxml
@@ -9,7 +9,7 @@
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
     <!-- Titel -->
-    <Label fx:id="welcomeText" style="-fx-font-size: 18px; -fx-font-weight: bold;" text="Welcome to FitQuest!" textFill="#ebf58e" />
+    <Label fx:id="welcomeText" style="-fx-font-size: 18px; -fx-font-weight: bold;" text="Welcome to FitQuest!" textFill="#f75c28" />
     <!-- Start Challenge-knappen -->
     <Button onAction="#onStartChallengeClick" prefWidth="200" text="Start Challenge" />
     <!-- Leaderboard-knappen -->
