--- a/src/main/resources/com/example/fitquest/css/Login.css
+++ b/src/main/resources/com/example/fitquest/css/Login.css
@@ -1,6 +1,5 @@
 #LoginGridPane {
-    -fx-background-size: cover;
-    -fx-background-position: center;
-    -fx-background-image: url('../images/bg2.jpg');
+    -fx-background-size: 100% 100%;
+    -fx-background-image: url('../images/LoginB.png');
     -fx-background-repeat: no-repeat;
 }
