--- a/src/main/resources/com/example/fitquest/css/Menu.css
+++ b/src/main/resources/com/example/fitquest/css/Menu.css
@@ -1,7 +1,6 @@
 #MenuGridPane{
-    -fx-background-size: cover;
-    -fx-background-position: center;
-    -fx-background-image: url('../images/bg4.png');
+    -fx-background-size: 100% 100%;
+    -fx-background-image: url('../images/MenuB.png');
     -fx-background-repeat: no-repeat;
 
 }
