--- a/src/main/resources/com/example/fitquest/login-view.fxml
+++ b/src/main/resources/com/example/fitquest/login-view.fxml
@@ -1,25 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.StackPane?>
-<StackPane fx:id="LoginGridPane" prefHeight="650.0" prefWidth="400.0" stylesheets="@css/Login.css"
-           xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="com.example.fitquest.Controller.LoginController">
+<StackPane fx:id="LoginGridPane" prefHeight="650.0" prefWidth="400.0" stylesheets="@css/Login.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fitquest.Controller.LoginController">
 
     <AnchorPane>
-        <TextField fx:id="usernameField" layoutX="120.0" layoutY="267.0" promptText="Användarnamn"/>
+        <TextField fx:id="usernameField" layoutX="116.0" layoutY="493.0" promptText="Användarnamn" />
 
-        <PasswordField fx:id="passwordField" layoutX="120.0" layoutY="312.0" promptText="Lösenord"/>
+        <PasswordField fx:id="passwordField" layoutX="115.0" layoutY="539.0" promptText="Lösenord" />
 
-        <Button layoutX="168.0" layoutY="403.0" onAction="#onLoginButtonClick" text="Logga in"/>
+        <Button layoutX="158.0" layoutY="596.0" onAction="#onLoginButtonClick" text="Logga in" />
 
-        <Label fx:id="errorLabel" style="-fx-font-size: 16px; -fx-font: bold" layoutX="70.0" layoutY="340.0"
-               textFill="red"/>
+        <Label fx:id="errorLabel" layoutX="70.0" layoutY="457.0" prefHeight="20.0" prefWidth="281.0" style="-fx-font-size: 16px; -fx-font: bold" textFill="red" />
     </AnchorPane>
 
 </StackPane>
