--- a/src/main/resources/com/example/fitquest/Menu-view.fxml
+++ b/src/main/resources/com/example/fitquest/Menu-view.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox fx:id="MenuGridPane" alignment="CENTER" spacing="20.0" stylesheets="@css/Menu.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fitquest.Controller.MenuController">
+<VBox fx:id="MenuGridPane" prefHeight="650.0" prefWidth="400.0" alignment="CENTER" spacing="20.0" stylesheets="@css/Menu.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fitquest.Controller.MenuController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
