--- a/src/main/resources/com/example/fitquest/quest-view.fxml
+++ b/src/main/resources/com/example/fitquest/quest-view.fxml
@@ -1,7 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<StackPane fx:id="QuestGridPane" prefHeight="800.0" prefWidth="400.0" stylesheets="@css/Challeng.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fitquest.Controller.LoginController">
+<AnchorPane fx:id="QuestGridPane" prefHeight="800.0" prefWidth="400.0" stylesheets="@css/Challeng.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fitquest.Controller.QuestController">
 
-</StackPane>
+    <Button fx:id="menuButton" layoutX="286.0" layoutY="696.0" onAction="#onMenuClick" prefWidth="100" text="Menu" AnchorPane.bottomAnchor="78.0" AnchorPane.rightAnchor="14.0" />
+
+    <CheckBox fx:id="checkMark" layoutX="31.0" layoutY="150.0" text="1." />
+
+    <CheckBox fx:id="checkMark1" layoutX="31.0" layoutY="280.0" text="1." />
+    <CheckBox fx:id="checkMark2" layoutX="31.0" layoutY="330.0" text="2." />
+    <CheckBox fx:id="checkMark3" layoutX="31.0" layoutY="380.0" text="3." />
+    <CheckBox fx:id="checkMark4" layoutX="31.0" layoutY="430.0" text="4." />
+    <CheckBox fx:id="checkMark5" layoutX="31.0" layoutY="480.0" text="5." />
+
+
+
+</AnchorPane>
