--- a/src/main/resources/com/example/fitquest/myquest-view.fxml
+++ b/src/main/resources/com/example/fitquest/myquest-view.fxml
@@ -3,9 +3,22 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.text.Font?>
 <VBox fx:id="MyQuestGridPane" alignment="BOTTOM_CENTER" prefHeight="800.0" prefWidth="400.0" spacing="20.0" stylesheets="@css/myquest.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fitquest.Controller.MyQuestsController">
-   <Button fx:id="menuButton" layoutX="286.0" layoutY="696.0" onAction="#onMenuClick" prefWidth="100" text="Menu" AnchorPane.bottomAnchor="78.0" AnchorPane.rightAnchor="14.0" />
-   <Label fx:id="myQuestsUserScore"/>
+   <Button fx:id="menuButton" layoutX="20.0" layoutY="30.0" onAction="#onMenuClick" mnemonicParsing="true">
+      <font>
+         <Font size="30.0" />
+      </font>
+      <graphic>
+         <ImageView fitHeight="20.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@images/homeButton.png" />
+            </image>
+         </ImageView>
+      </graphic>
+   </Button>   <Label fx:id="myQuestsUserScore"/>
    <Button onMouseClicked="#myQuestsFinishButtonClicked" mnemonicParsing="false" text="Quest finished" />
       <ListView fx:id="myQuestsList" maxHeight="300.0" maxWidth="300.0" onMouseReleased="#myQuestsListClicked" prefHeight="300.0" prefWidth="300.0" />
    <TextArea fx:id="myQuestsDescriptionTextArea" maxHeight="100.0" maxWidth="300.0" prefHeight="100.0" prefWidth="300.0" />
