--- a/src/main/resources/com/example/fitquest/css/Challeng.css
+++ b/src/main/resources/com/example/fitquest/css/Challeng.css
@@ -2,4 +2,21 @@
     -fx-background-size: 100% 100%;
     -fx-background-image: url('../images/QuestB.png');
     -fx-background-repeat: no-repeat;
+
+}
+
+.label {
+    -fx-text-fill: #333;
+}
+
+.button {
+    -fx-background-color: #4CAF50;
+    -fx-text-fill: white;
+    -fx-font-size: 16px;
+    -fx-border-radius: 5px;
+    -fx-background-radius: 5px;
+}
+
+.button:hover {
+    -fx-background-color: #45A049;
 }
