--- a/src/main/resources/com/example/fitquest/quest-view.fxml
+++ b/src/main/resources/com/example/fitquest/quest-view.fxml
@@ -8,7 +8,7 @@
    <children>
       <ListView fx:id="uniqueQuestsList" layoutX="28.0" layoutY="233.0" prefHeight="304.0" prefWidth="345.0" />
       <ListView fx:id="questsList" layoutX="58.0" layoutY="138.0" prefHeight="44.0" prefWidth="282.0" />
-       <Button accessibleRole="MENU_BUTTON" layoutX="147.0" layoutY="675.0" mnemonicParsing="false" onAction="#onMenuClick" prefHeight="58.0" prefWidth="95.0">
+       <Button accessibleRole="MENU_BUTTON" layoutX="147.0" layoutY="673.0" mnemonicParsing="false" onAction="#onMenuClick" prefHeight="58.0" prefWidth="95.0">
            <graphic>
                <ImageView fitHeight="86.0" fitWidth="83.0">
                    <image>
@@ -19,7 +19,7 @@
        </Button>
 
 
-      <Button layoutX="151.0" layoutY="575.0" mnemonicParsing="false" onAction="#addToMyQuestsButtonClicked" text="Take quest" textFill="#b40003"/>
+      <Button layoutX="151.0" layoutY="575.0" mnemonicParsing="false" onAction="#addToMyQuestsButtonClicked" text="Take quest" />
    </children>
 
 </AnchorPane>
