--- a/src/main/resources/com/example/fitquest/myquest-view.fxml
+++ b/src/main/resources/com/example/fitquest/myquest-view.fxml
@@ -7,7 +7,7 @@
 
 <VBox fx:id="MyQuestGridPane" alignment="BOTTOM_CENTER" prefHeight="800.0" prefWidth="400.0" spacing="20.0" stylesheets="@css/myquest.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fitquest.Controller.MyQuestsController">
 
-   <Button fx:id="menuButton" layoutX="5.0" layoutY="5.0" mnemonicParsing="true" onAction="#onMenuClick" translateX="160.0" translateY="-190.0">
+   <Button fx:id="menuButton" layoutX="5.0" layoutY="5.0" mnemonicParsing="true" onAction="#onMenuClick" translateX="160.0" translateY="-90.0">
       <font>
          <Font size="30.0" />
       </font>
@@ -18,8 +18,21 @@
             </image>
          </ImageView>
       </graphic>
+   </Button>   <Label fx:id="myQuestsUserScore" translateY="50.0" textFill="red" />
 
-   </Button>   <Label fx:id="myQuestsUserScore" />
+   <Button fx:id="groupButton" layoutX="5.0" layoutY="5.0" mnemonicParsing="true" onAction="#resetButtonClicked" translateX="0.0" translateY="40.0">
+      <font>
+         <Font size="30.0" />
+      </font>
+      <graphic>
+         <ImageView fitHeight="27.0" fitWidth="29.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@images/groupButton.png" />
+            </image>
+         </ImageView>
+      </graphic>
+   </Button>   <Label fx:id="myQuestsUserScore2"  />
+
 
    <Button mnemonicParsing="false" onMouseClicked="#myQuestsFinishButtonClicked" text="Quest finished" />
       <ListView fx:id="myQuestsList" maxHeight="300.0" maxWidth="300.0" onMouseReleased="#myQuestsListClicked" prefHeight="300.0" prefWidth="300.0" />
