--- a/src/main/resources/com/example/fitquest/leaderboard-view.fxml
+++ b/src/main/resources/com/example/fitquest/leaderboard-view.fxml
@@ -1,37 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<VBox fx:id="LeaderboardGridPane" alignment="BOTTOM_CENTER" prefHeight="800.0" prefWidth="400.0" spacing="20.0" stylesheets="@css/Leaderbord.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fitquest.Controller.LeaderbordController">
+<BorderPane fx:id="LeaderboardGridPane" stylesheets="@css/Leaderbord.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fitquest.Controller.LeaderbordController">
+    <center>
+        <VBox fx:id="vboxLeaderboard" alignment="CENTER" spacing="50.0" BorderPane.alignment="TOP_CENTER">
+            <VBox alignment="CENTER">
+                <Label style="-fx-font-size: 18px; -fx-font-weight: bold; -fx-font-family: 'Andale Mono';" text="1. Myron Champ - 550" textFill="#d7c010" />
+                <Label style="-fx-font-size: 18px;-fx-font-weight: bold; -fx-font-family: 'Andale Mono';" text="2. Huge Dik - 440" />
+                <Label style="-fx-font-size: 18px;-fx-font-weight: bold; -fx-font-family: 'Andale Mono';" text="3. Sam Sung - 420" />
+                <Label style="-fx-font-size: 18px;-fx-font-weight: bold; -fx-font-family: 'Andale Mono';" text="4. Juan Direction - 200" />
+                <Label style="-fx-font-size: 18px;-fx-font-weight: bold; -fx-font-family: 'Andale Mono';" text="5. Hugh Mungus - 170" />
+            </VBox>
 
-    <!-- Menu Button -->
-    <Button fx:id="menuButton" layoutX="5.0" layoutY="5.0" mnemonicParsing="true" onAction="#onMenuClick" translateX="160.0" translateY="-470.0">
-        <font>
-            <Font size="30.0" />
-        </font>
-        <graphic>
-            <ImageView fitHeight="27.0" fitWidth="29.0" pickOnBounds="true" preserveRatio="true">
-                <image>
-                    <Image url="@images/homeButton.png" />
-                </image>
-            </ImageView>
-        </graphic>
-    </Button>
+            <!-- User Score Display -->
+            <Label fx:id="myQuestsUserScore" style="-fx-font-size: 20px; -fx-text-fill: #318d02;-fx-font-weight: bold; -fx-font-family: 'Andale Mono';" text="Your Score: 50" textFill="#c8ffd1" />
+         <BorderPane.margin>
+            <Insets top="200.0" />
+         </BorderPane.margin>
+        </VBox>
+    </center>
 
-
-    <!-- Leaderboard Entries -->
-    <VBox alignment="TOP_CENTER" spacing="10.0">
-        <Label style="-fx-font-size: 24px; -fx-font-weight: bold; -fx-font-family: 'Andale Mono';" text="1. Myron Champ - 550" textFill="#d7c010" translateY="-300.0" />
-        <Label style="-fx-font-size: 24px;-fx-font-weight: bold; -fx-font-family: 'Andale Mono';" text="2. Huge Dik - 440" translateY="-300.0" />
-        <Label style="-fx-font-size: 24px;-fx-font-weight: bold; -fx-font-family: 'Andale Mono';" text="3. Sam Sung - 420" translateY="-300.0" />
-        <Label style="-fx-font-size: 24px;-fx-font-weight: bold; -fx-font-family: 'Andale Mono';" text="4. Juan Direction - 200" translateY="-300.0" />
-        <Label style="-fx-font-size: 24px;-fx-font-weight: bold; -fx-font-family: 'Andale Mono';" text="5. Hugh Mungus - 170" translateY="-300.0" />
-    </VBox>
-
-    <!-- User Score Display -->
-    <Label fx:id="myQuestsUserScore" style="-fx-font-size: 20px; -fx-text-fill: #318d02;-fx-font-weight: bold; -fx-font-family: 'Andale Mono';" text="Your Score: 50" textFill="#c8ffd1" translateX="-5.0" translateY="-184.0" />
-
-</VBox>
+   <bottom>
+         <!-- Menu Button -->
+         <Button fx:id="menuButton" onAction="#onMenuClick" BorderPane.alignment="BOTTOM_RIGHT">
+             <graphic>
+                 <ImageView fitHeight="27.0" fitWidth="29.0" pickOnBounds="true" preserveRatio="true">
+                     <Image url="@images/homeButton.png" />
+                 </ImageView>
+             </graphic>
+         <BorderPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin>
+         </Button>
+   </bottom>
+</BorderPane>
