--- a/src/main/resources/com/example/fitquest/myquest-view.fxml
+++ b/src/main/resources/com/example/fitquest/myquest-view.fxml
@@ -1,40 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 
-<VBox fx:id="MyQuestGridPane" alignment="BOTTOM_CENTER" prefHeight="800.0" prefWidth="400.0" spacing="20.0" stylesheets="@css/myquest.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fitquest.Controller.MyQuestsController">
+<BorderPane fx:id="MyQuestGridPane" stylesheets="@css/myquest.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fitquest.Controller.MyQuestsController">
+   <center>
+      <VBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+         <Label fx:id="myQuestsUserScore" textFill="red" />
+         <Button mnemonicParsing="false" onMouseClicked="#myQuestsFinishButtonClicked" text="Quest finished" />
+         <ListView fx:id="myQuestsList" maxHeight="300.0" maxWidth="300.0" onMouseReleased="#myQuestsListClicked" />
+         <TextArea fx:id="myQuestsDescriptionTextArea" maxHeight="100.0" maxWidth="300.0" />
+         <BorderPane.margin>
+            <Insets top="150.0" />
+         </BorderPane.margin>
+      </VBox>
+   </center>
 
-   <Button fx:id="menuButton" layoutX="5.0" layoutY="5.0" mnemonicParsing="true" onAction="#onMenuClick" translateX="160.0" translateY="-90.0">
-      <font>
-         <Font size="30.0" />
-      </font>
-      <graphic>
-         <ImageView fitHeight="27.0" fitWidth="29.0" pickOnBounds="true" preserveRatio="true">
-            <image>
+   <bottom>
+      <Button accessibleRole="MENU_BUTTON" mnemonicParsing="false" onAction="#onMenuClick" BorderPane.alignment="BOTTOM_RIGHT">
+         <graphic>
+            <ImageView fitHeight="30.0" fitWidth="30.0">
                <Image url="@images/homeButton.png" />
-            </image>
-         </ImageView>
-      </graphic>
-   </Button>   <Label fx:id="myQuestsUserScore" translateY="50.0" textFill="red" />
-
-   <Button fx:id="groupButton" layoutX="5.0" layoutY="5.0" mnemonicParsing="true" onAction="#resetButtonClicked" translateX="0.0" translateY="40.0">
-      <font>
-         <Font size="30.0" />
-      </font>
-      <graphic>
-         <ImageView fitHeight="27.0" fitWidth="29.0" pickOnBounds="true" preserveRatio="true">
-            <image>
+            </ImageView>
+         </graphic>
+         <BorderPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </BorderPane.margin>
+      </Button>
+   </bottom>
+   <top>
+      <Button fx:id="groupButton" onAction="#resetButtonClicked" BorderPane.alignment="TOP_RIGHT">
+         <graphic>
+            <ImageView fitHeight="27.0" fitWidth="29.0" pickOnBounds="true" preserveRatio="true">
                <Image url="@images/groupButton.png" />
-            </image>
-         </ImageView>
-      </graphic>
-   </Button>   <Label fx:id="myQuestsUserScore2"  />
+            </ImageView>
+         </graphic>
+         <BorderPane.margin>
+            <Insets right="10.0" top="10.0" />
+         </BorderPane.margin>
+      </Button>
+   </top>
 
-
-   <Button mnemonicParsing="false" onMouseClicked="#myQuestsFinishButtonClicked" text="Quest finished" />
-      <ListView fx:id="myQuestsList" maxHeight="300.0" maxWidth="300.0" onMouseReleased="#myQuestsListClicked" prefHeight="300.0" prefWidth="300.0" />
-   <TextArea fx:id="myQuestsDescriptionTextArea" maxHeight="100.0" maxWidth="300.0" prefHeight="100.0" prefWidth="300.0" translateY="-5.0" />
-</VBox>
+</BorderPane>
