--- a/src/main/resources/com/example/fitquest/quest-view.fxml
+++ b/src/main/resources/com/example/fitquest/quest-view.fxml
@@ -1,25 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="QuestGridPane" prefHeight="800.0" prefWidth="398.0" stylesheets="@css/Challeng.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fitquest.Controller.QuestController">
-    <children>
+<BorderPane fx:id="QuestGridPane" stylesheets="@css/Challeng.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.fitquest.Controller.QuestController">
+    <center>
+        <VBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+            <BorderPane.margin>
+                <Insets top="150.0" />
+            </BorderPane.margin>
+            
+            <ListView fx:id="allQuestsNameListView" maxHeight="300.0" maxWidth="300.0" />
+      
+            <Button mnemonicParsing="false" onAction="#addToMyQuestsButtonClicked" text="Take quest" />
+        </VBox>
+    </center>
 
-        <ListView fx:id="allQuestsNameListView" layoutX="28.0" layoutY="233.0" prefHeight="304.0" prefWidth="345.0" />
+   <bottom>
+       <Button accessibleRole="MENU_BUTTON" mnemonicParsing="false" onAction="#onMenuClick" BorderPane.alignment="BOTTOM_RIGHT">
+           <graphic>
+               <ImageView fitHeight="30.0" fitWidth="30.0">
+                   <Image url="@images/homeButton.png" />
+               </ImageView>
+           </graphic>
+           <BorderPane.margin>
+               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+           </BorderPane.margin>
+       </Button>
+   </bottom>
 
-        <Button accessibleRole="MENU_BUTTON" layoutX="147.0" layoutY="673.0" mnemonicParsing="false" onAction="#onMenuClick" prefHeight="58.0" prefWidth="95.0">
-            <graphic>
-                <ImageView fitHeight="86.0" fitWidth="83.0">
-                    <image>
-                        <Image url="@images/homeButton.png" />
-                    </image>
-                </ImageView>
-            </graphic>
-        </Button>
-
-
-        <Button layoutX="151.0" layoutY="575.0" mnemonicParsing="false" onAction="#addToMyQuestsButtonClicked" text="Take quest" translateX="8.0" translateY="30.0" />
-    </children>
-</AnchorPane>
+</BorderPane>
